moved home page stats to cs-api

--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -88,12 +88,12 @@
         </div>
         <div class="label label-2 label-blue">
             <a href="/challenges" style="text-decoration: none"><span class="pin notext">&nbsp;</span>
-                <strong><span><%= @challenes_open.to_i %></span></strong> <small>open challenges</small></a>
+                <strong><span><%= @challenges_open.to_i %></span></strong> <small>open challenges</small></a>
         </div>
         <div class="label label-3 label-green">
             <a href="/challenges?show=closed" style="text-decoration: none">
                 <span class="pin notext">&nbsp;</span> <strong>
-                <span><%= @chalenges_won.to_i %></span></strong> <small>challenges won</small> </a>
+                <span><%= @challenges_won.to_i %></span></strong> <small>challenges won</small> </a>
         </div>
         <div class="label label-4 label-blue">
             <a href="/challenges" style="text-decoration: none"><span class="pin notext">&nbsp;</span>
