--- a/app/views/challenges/_challenge-sidebar-preview.html.erb
+++ b/app/views/challenges/_challenge-sidebar-preview.html.erb
@@ -37,7 +37,7 @@
 	<% end %></span></strong></li>
 
 	<li style="display:block;"><h3>Participants</h3>
-		<strong><span><a href="<%= registrants_path %>"><%= pluralize(@challenge_detail["Registered_Members__c"].to_i, 'Member') %> Registered</a></span></strong>
+		<strong><span><%= pluralize(@challenge_detail["Participating_Members__c"].to_i, 'member') %> watching or participating</span></strong>
 	</li>
 
 	<% unless @challenge_detail['License_Type__r'].nil? %>
