added participants back in

--- a/app/views/challenges/_challenge-sidebar-preview.html.erb
+++ b/app/views/challenges/_challenge-sidebar-preview.html.erb
@@ -35,7 +35,7 @@
 	<% end %></span></strong></li>
 
 	<li style="display:block;"><h3>Participants</h3>
-		<strong><span><%= pluralize(@challenge_detail["Participating_Members__c"].to_i, 'member') %> watching or participating</span></strong>
+		<strong><span><%= pluralize(@challenge_detail["Participating_Members__c"].to_i, 'member') %> participating with <%= @challenge_detail["Registered_Members__c"].to_i %> registered</span></strong>
 	</li>
 
 	<% unless @challenge_detail['License_Type__r'].nil? %>
