--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -72,7 +72,7 @@
 		                                    <span><%= format_close_date(record['End_Date__c']) %> for </span><br />
 
 		                                    <% if record['Community__c'] %><%= link_to "#{record['Community__r']['Name']} Community", community_url(record['Community__r']['Name'].downcase) %><br/><% end %>
-																				<%= pluralize(record["Participating_Members__c"], 'member') %> watching or participating
+																				<%= pluralize(record["Participating_Members__c"], 'member') %> participating with <%= record["Registered_Members__c"].to_i %> registered
 																				</p>
 
 																				<p style="margin-top:5px"><%= image_tag("type-"+record['Challenge_Type__c'].downcase+".png", :height => "18", :alt => record['Challenge_Type__c'].upcase) %></p>
