added judging queue

--- a/app/views/accounts/_menu.html.haml
+++ b/app/views/accounts/_menu.html.haml
@@ -6,7 +6,7 @@
 .menu
   %ul
     = build_menu("my",selected_item)
-%h3 Review Submissions
+%h3 Submissions
 .menu
   %ul
     = build_menu("review",selected_item)
