added auto signup for judges

--- a/app/views/challenges/preview_survey.html.erb
+++ b/app/views/challenges/preview_survey.html.erb
@@ -115,7 +115,7 @@
 			<label>5. How would you participate in this challenge?</label>
 			<div class="holder">
 			<input type="radio" name="survey[participation]" value="I would like to be a reviewer" />
-			<%= label_tag("I would like to be a reviewer") %><br/>
+			<%= label_tag("I would like to be a reviewer (this will add you as a judge for this challenge if there are spots available)") %><br/>
 			<input type="radio" name="survey[participation]" value="I will submit a solution" />
 			<%= label_tag("I will submit a solution") %><br/>
 			<input type="radio" name="survey[participation]" value="75% chance that I will submit a solution" />
