--- a/app/views/member_mailer/welcome_email.html.erb
+++ b/app/views/member_mailer/welcome_email.html.erb
@@ -19,7 +19,7 @@
 	</p>
 	<h3>Getting Started</h3>
 	<p>
-		Take a look at our <a href="<%= ENV['WEBSITE_URL'] %>/challenges">list of open challenges</a> and find one that interests you. You can register to compete or add challenges to your watch-list to track their progress. Once you've registered, develop your application based upon the challenge requirements and submit your code before the challenge closes for entries. All entries are judged on a balanced scorecard by your peers and a winner(s) is selected. For full details, check out <a href="<%= ENV['WEBSITE_URL'] %>/about">how the process works</a>.
+		Take a look at our <a href="<%= ENV['WEBSITE_URL'] %>/challenges">list of open challenges</a> and find one that interests you. You can register to compete or add challenges to your watch-list to track their progress. Once you've registered, develop your application based upon the challenge requirements and submit your code before the challenge closes for entries. All entries are judged on a balanced scorecard by your peers and a winner(s) is selected. For full details, check out <a href="<%= ENV['WEBSITE_URL'] %>/how-it-works/challenge">how the process works</a>.
 	</p>
 	<h3>Stay up to date on our latest development challenges for money, prizes and badges:</h3>
 	<ul>
