--- a/app/views/accounts/_community.html.haml
+++ b/app/views/accounts/_community.html.haml
@@ -4,9 +4,9 @@
       .box-t
         .col-left.fl
           %h4
-            %a{:href => community_url(community["Name"].downcase)}= community["Name"]
-          %p= "#{raw(truncate(community["About__c"].gsub(/<\/?[^>]*>/, ""), :length => 400, :separator => ' '))}"
+            %a{:href => community_url(community["community_id"])}= community["name"]
+          %p= "#{raw(truncate(community["about"].gsub(/<\/?[^>]*>/, ""), :length => 400, :separator => ' '))}"
         .col-right.fr
           %p
-            = "#{community["Members__c"].to_i} members"
+            = "#{community["members"].to_i} members"
         .cl  
