--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,20 +1,20 @@
-<div class="page-heading"><h2 class="melbourne"><%= @community['Name'] %> Private Community</h2></div>
+<div class="page-heading"><h2 class="melbourne"><%= @community['name'] %> Private Community</h2></div>
 
 <div class="content-wrapper">
 	
 	<div style="width:585px;float:left">
 	
-		<%= raw(@community['About__c'])%><br/>
+		<%= raw(@community['about'])%><br/>
 
 		<h3 style="padding-top:10px"><%= pluralize(@challenges.size, "challenge") %> to compete in!</h3>
 
 		<div style="padding-bottom:15px"></div>
 		
 		<% @challenges.each do |record| %>
-			<h4 style="margin-bottom:5px"><%= link_to "#{record["Name"]}", challenge_url(record['Challenge_Id__c']) %></h4>
-			<span style="font-weight:bold"><%= format_close_date(record['End_Date__c'].to_s) %> for <%= record['Top_Prize__c'] %> &middot; <%= pluralize(record["Registered_Members__c"], 'registered member') %></span>
-			<p><%= raw(truncate(record["Description__c"].gsub(/<\/?[^>]*>/, ""), :length => 400, :separator => ' ')) %></p>
-			<a class="button fl" href="<%= challenge_url(record['Challenge_Id__c']) %>"><span>View Details</span></a>
+			<h4 style="margin-bottom:5px"><%= link_to "#{record["name"]}", challenge_url(record['challenge_id']) %></h4>
+			<span style="font-weight:bold"><%= format_close_date(record['end_date'].to_s) %> for <%= record['top_prize'] %> &middot; <%= pluralize(record["registered_members"], 'registered member') %></span>
+			<p><%= raw(truncate(record["description"].gsub(/<\/?[^>]*>/, ""), :length => 400, :separator => ' ')) %></p>
+			<a class="button fl" href="<%= challenge_url(record['challenge_id']) %>"><span>View Details</span></a>
 			<div style="padding-top:50px"></div>
 		<% end %>
 	
@@ -22,7 +22,7 @@
 	
 	<div style="width:350px; float:left">
 		
-		<h3 style="padding-left:40px"><%= @community['Name'] %> Leaderboard</h3>
+		<h3 style="padding-left:40px"><%= @community['name'] %> Leaderboard</h3>
 
     <% if @leaderboard.size > 0 %>
     	<div class="leaders">
