--- a/app/views/member_mailer/welcome_email_from_import.html.erb
+++ b/app/views/member_mailer/welcome_email_from_import.html.erb
@@ -19,14 +19,12 @@
 	<p>Once you <a href="<%= ENV['WEBSITE_URL'] %>/login">log into CloudSpokes</a>, make sure that you <a href="<%= ENV['WEBSITE_URL'] %>//account/password">change your password</a>.</p>
 
 	<% unless @community_id.eql?('none') %>
-		<p>We have also added you to the Private CloudSpokes Community for <%= @partner_name %>. Once you login, you can access the community and all of it's challenges at: <%= ENV['WEBSITE_URL'] %>/communities/<%= @community_id %></p>
+		<p>We have also added you to a Private CloudSpokes Community. Once you login, you can access the community and all of it's challenges at: <%= ENV['WEBSITE_URL'] %>/communities/<%= @community_id %></p>
 	<% end %>
 
 	<p>CloudSpokes is the worldwide leader in crowdsourced cloud development and is extremely excited to be partnering with <%= @partner_name %>.</p>
 
-	<p>With over 50,000 cloud experts and nearly $800k paid out to our members in less than 2 years, CloudSpokes is a great place for you to enhance your development and design skills, as well as build a great portfolio of professional level work.</p>
-
-	<p>Our members win an average of $1,000 a day, so what are you waiting for? Earn some extra cash now! To sign in just use the following user name and password:</p>
+	<p>With more than 50,000 cloud experts and nearly $800,000 USD paid to our members in less than two years, CloudSpokes is a great place to enhance your development and design skills, as well as build a great portfolio of professional level work and earn cash. Our collective members win an average of $1,000 each day!</p>
 
 	<p>Here are a just a few of the awesome challenges that await you:
 	<ul>
