--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -24,7 +24,7 @@
 					<% if @challenge_detail["Community__r"] %>
 						<% unless @challenge_detail['Community__r']['Name'].eql?('Private Challenges') %>
 							<h3><%= @challenge_detail['Community__r']['Name'] %> Community</h3>
-							<p>This is a private challenge for members of the <%= link_to "#{@challenge_detail['Community__r']['Name']} Community", community_url(@challenge_detail['Community__r']['Name'].downcase) %>.</p>
+							<p>This is a private challenge for members of the <%= link_to "#{@challenge_detail['Community__r']['Name']} Community", community_url(@challenge_detail['Community__r']['Community_Id__c'].downcase) %>.</p>
 						<% end %>
 					<% end %>
 
