--- a/app/views/accounts/judging_queue.html.erb
+++ b/app/views/accounts/judging_queue.html.erb
@@ -64,6 +64,8 @@ function signup(challenge_id) {
 				<% end %>
 			<% end %>			
 
+			<br><%= link_to 'Subscribe to the judging feed', judging_feed_path, :class => 'get-rss fl' %>
+
 		</div>
 
 	</div>
