--- a/app/views/member_mailer/welcome_email_from_import.html.erb
+++ b/app/views/member_mailer/welcome_email_from_import.html.erb
@@ -7,11 +7,11 @@
 	<table with="100%" cellpadding="2" cellspacing="2">
 	<tr>
 		<td><a href="<%= ENV['WEBSITE_URL'] %>"><img src="https://s3.amazonaws.com/cs-public/email_images/cloudspokes-logo.png"></a></td>
-		<td><h2><%= @partner_name %> and CloudSpokes have partnered up!</h2></td>
+		<td><h2>Thanks for joining CloudSpokes!</h2></td>
 	</tr>
 	</table>
 
-	<p><%= @partner_name %> has signed you up for CloudSpokes, and <a href="<%= ENV['WEBSITE_URL'] %>/login">you are now able to login</a>!</p>
+	<p>You were recently granted access to Cloudspokes by IUBAT and <a href="<%= ENV['WEBSITE_URL'] %>/login">you are now able to log in</a>:</p>
 
 	<p>Membername: <strong><%= @membername %></strong><br/>
 	Password: <strong><%= @temp_password %></strong></p>
@@ -19,12 +19,12 @@
 	<p>Once you <a href="<%= ENV['WEBSITE_URL'] %>/login">log into CloudSpokes</a>, make sure that you <a href="<%= ENV['WEBSITE_URL'] %>//account/password">change your password</a>.</p>
 
 	<% unless @community_id.eql?('none') %>
-		<p>We have also added you to a Private CloudSpokes Community. Once you login, you can access the community and all of it's challenges at: <%= ENV['WEBSITE_URL'] %>/communities/<%= @community_id %></p>
+		<p>You also have access to the private CloudSpokes community, Royal Bengal Tigers. Once you login, you can access the community and all of it's challenges at: <%= ENV['WEBSITE_URL'] %>/communities/<%= @community_id %></p>
 	<% end %>
 
-	<p>CloudSpokes is the worldwide leader in crowdsourced cloud development and is extremely excited to be partnering with <%= @partner_name %>.</p>
+	<p>CloudSpokes is the worldwide leader in crowdsourced cloud development and is excited that you are now part of it!.</p>
 
-	<p>With more than 50,000 cloud experts and nearly $800,000 USD paid to our members in less than two years, CloudSpokes is a great place to enhance your development and design skills, as well as build a great portfolio of professional level work and earn cash. Our collective members win an average of $1,000 each day!</p>
+	<p>With more than 55,000 cloud experts and more than $800,000 USD paid to our members in less than two years, CloudSpokes is a great place to enhance your development and design skills, as well as build a great portfolio of professional level work and earn cash. Our collective members win an average of $1,000 each day!</p>
 
 	<p>Here are a just a few of the awesome challenges that await you:
 	<ul>
@@ -36,7 +36,7 @@
 	<p><a href="<%= ENV['WEBSITE_URL'] %>/challenges">Start competing today</a> for money, prizes, badges and bragging rights!</p>
 
 	<h3>Getting Started</h3>
-	<p>Take a look at our <a href="<%= ENV['WEBSITE_URL'] %>/challenges">list of open challenges</a> and find one that interests you. You can register to compete or add challenges to your watch-list to track their progress. Once you've registered, develop your application based upon the challenge requirements and submit your code before the challenge closes for entries. All entries are judged on a balanced scorecard by your peers and a winner(s) is selected. For full details, check out <a href="<%= ENV['WEBSITE_URL'] %>/how-it-works/challenge">how the process works</a>.</p>
+	<p>Take a look at our <a href="<%= ENV['WEBSITE_URL'] %>/challenges">list of open challenges</a> and find one that interests you. You can register to compete or add challenges to your watch-list to track their progress. Once you've registered, develop your application based upon the challenge requirements and submit your code before the challenge closes for entries. All entries are judged on a balanced scorecard by your peers and a winner(s) is selected. For full details, check out <a href="http://content.cloudspokes.com/how-it-works/challenge">how the process works</a>.</p>
 
 	<h3>Stay up to date on our latest development challenges for money, prizes and badges:</h3>
 	<ul>
