--- a/app/views/member_mailer/welcome_email_from_import.html.erb
+++ b/app/views/member_mailer/welcome_email_from_import.html.erb
@@ -22,7 +22,7 @@
 		<p>You also have access to the private CloudSpokes community, Royal Bengal Tigers. Once you login, you can access the community and all of it's challenges at: <%= ENV['WEBSITE_URL'] %>/communities/<%= @community_id %></p>
 	<% end %>
 
-	<p>CloudSpokes is the worldwide leader in crowdsourced cloud development and is excited that you are now part of it!.</p>
+	<p>CloudSpokes is the worldwide leader in crowdsourced cloud development and is excited that you are now part of it!</p>
 
 	<p>With more than 55,000 cloud experts and more than $800,000 USD paid to our members in less than two years, CloudSpokes is a great place to enhance your development and design skills, as well as build a great portfolio of professional level work and earn cash. Our collective members win an average of $1,000 each day!</p>
 
