--- a/app/views/member_mailer/welcome_email_from_import.html.erb
+++ b/app/views/member_mailer/welcome_email_from_import.html.erb
@@ -7,11 +7,11 @@
 	<table with="100%" cellpadding="2" cellspacing="2">
 	<tr>
 		<td><a href="<%= ENV['WEBSITE_URL'] %>"><img src="https://s3.amazonaws.com/cs-public/email_images/cloudspokes-logo.png"></a></td>
-		<td><h2>Thanks for joining CloudSpokes!</h2></td>
+		<td><h2><%= @partner_name %> and CloudSpokes have partnered up!</h2></td>
 	</tr>
 	</table>
 
-	<p>You were recently granted access to Cloudspokes by IUBAT and <a href="<%= ENV['WEBSITE_URL'] %>/login">you are now able to log in</a>:</p>
+	<p><%= @partner_name %> has signed you up for CloudSpokes, and <a href="<%= ENV['WEBSITE_URL'] %>/login">you are now able to login</a>!</p>
 
 	<p>Membername: <strong><%= @membername %></strong><br/>
 	Password: <strong><%= @temp_password %></strong></p>
@@ -22,7 +22,7 @@
 		<p>You also have access to the private CloudSpokes community, Royal Bengal Tigers. Once you login, you can access the community and all of it's challenges at: <%= ENV['WEBSITE_URL'] %>/communities/<%= @community_id %></p>
 	<% end %>
 
-	<p>CloudSpokes is the worldwide leader in crowdsourced cloud development and is excited that you are now part of it!</p>
+	<p>CloudSpokes is the worldwide leader in crowdsourced cloud development and is extremely excited to be partnering with <%= @partner_name %>.</p>
 
 	<p>With more than 55,000 cloud experts and more than $800,000 USD paid to our members in less than two years, CloudSpokes is a great place to enhance your development and design skills, as well as build a great portfolio of professional level work and earn cash. Our collective members win an average of $1,000 each day!</p>
 
