outputted as raw html

--- a/app/views/member_mailer/new_challenge_comment.html.erb
+++ b/app/views/member_mailer/new_challenge_comment.html.erb
@@ -17,7 +17,7 @@
 	<tr>
 		<td>&nbsp;</td>
 		<td><img src="<%= @profile_pic %>" width="75"></a></td>
-		<td><em>"<%= @comments %>"</em></td>
+		<td><em>"<%= raw(@comments) %>"</em></td>
 	</tr>	
 	</table>
 	<p><br/>
