aligned image at top

--- a/app/views/member_mailer/new_challenge_comment.html.erb
+++ b/app/views/member_mailer/new_challenge_comment.html.erb
@@ -16,7 +16,7 @@
 	<table cellpadding="5" cellspacing="5">
 	<tr>
 		<td>&nbsp;</td>
-		<td><img src="<%= @profile_pic %>" width="75"></a></td>
+		<td style="vertical-align:top;"><img src="<%= @profile_pic %>" width="75"></a></td>
 		<td><em>"<%= raw(@comments) %>"</em></td>
 	</tr>	
 	</table>
