--- a/app/views/accounts/challenges_as_admin.html.erb
+++ b/app/views/accounts/challenges_as_admin.html.erb
@@ -5,12 +5,12 @@
 		</div>
 		<div class="widecolumn fr">
 
-			<h3>My 'Admin' Challlenges</h3>
+			<h3>My 'Admin' Challenges</h3>
 			<p style="margin-bottom:15px">Below are the challenges in which you are either a judge, contact or comment notifier.</p>
 
 			<% unless @planned_challenges.empty? %>
 
-				<h4>Planned Challlenges</h4>
+				<h4>Planned Challenges</h4>
 				<table class="fancytable" style="width:100%">
 				    <thead>
 				    	<tr>
@@ -34,7 +34,7 @@
 
 			<% unless @in_progress_challenges.empty? %>
 
-				<h4>In Progress Challlenges</h4>
+				<h4>In Progress Challenges</h4>
 				<table class="fancytable" style="width:100%">
 				    <thead>
 				    	<tr>
@@ -65,7 +65,7 @@
 
 			<% unless @completed_challenges.empty? %>
 
-				<h4>Completed Challlenges</h4>
+				<h4>Completed Challenges</h4>
 				<table class="fancytable" style="width:100%";margin-bottom:25px>
 				    <thead>
 				    	<tr>
