--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -69,7 +69,7 @@
 
 	    <div id="quick_actions">
         <a id="inboxLink" class="button_big" href="/messages">Inbox</a>
-        <a id="messageBoxLink" class="fancy button_big" href="#newMsg">Reply to this message</a>                 
+        <a id="messageBoxLink" class="fancy button_big" href="#newMsg">Reply</a>                 
       </div><br/><br/>
       <!--Datatable-->
       <div class="widget">
