--- a/app/views/accounts/referrals.html.erb
+++ b/app/views/accounts/referrals.html.erb
@@ -37,7 +37,7 @@
 			
 			<% else %>
 				<p style="padding-bottom:35px">
-					<img src="http://static3.businessinsider.com/image/4d93481149e2ae9951800000/dropbox-referral.jpg" width="250" style="float:left">
+					<img src="http://www.inspirationmix.com/wp-content/uploads/2012/01/Valentines-Day-vector-02.jpg" width="250" style="float:left">
 					<div style="padding-top:25px;font-weight:bold">No referrals yet. Go invite your friends!</div></p>
 			<% end %>
 
