--- a/app/views/accounts/judging_queue.html.erb
+++ b/app/views/accounts/judging_queue.html.erb
@@ -21,7 +21,7 @@ function signup(challenge_id) {
 			<h3>Judging Queue</h3>
 			<p>Would you like to judge challenge submissions? Here's how the judging process works. We typically have two judges per challenges so the following challenges need at least one judge. Find a challenge in a technology category that you feel confident that you can judge. Make sure that you can also commit to submitting all scorecards by the Due date for the challenge.</p>
 
-			<p>Once the challnege closes you'll receive a notification email that the submissions are available and scorecards are ready for you to judge. Once you install, run, test and evaluate each submission (we have plenty of judging instructions for you), you'll complete a scorecard grading the submission. Once all judges have completed all scorecards the winners will be selected.</p>
+			<p>Once the challenge closes you'll receive a notification email that the submissions are available and scorecards are ready for you to judge. Once you install, run, test and evaluate each submission (we have plenty of judging instructions for you), you'll complete a scorecard grading the submission. Once all judges have completed all scorecards the winners will be selected.</p>
 
 			<p>We will pay you $25 for each submission that you judge and a bonus of $50 for every 10 submissions that you judge within a month. You can judge as many submissions as you'd like. Any poor reviews and/or scorecards will not be credit. Only CloudSpokes members that have won at least three challenges are eligible.</p>
 				
