vanilla jsonp changes

--- a/app/views/content/forums.html.erb
+++ b/app/views/content/forums.html.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 var vanilla_forum_url = 'http://cloudspokes.vanillaforums.com'; 
-var vanilla_sso = '<%=@signed_signature %> <%= @signature %> <%= Time.now %> hmacsha1';
+var vanilla_sso = '<%= @vanilla_sso %>';
 
 /*** DON'T EDIT BELOW THIS LINE ***/
 
