--- a/app/views/accounts/judging_queue.html.erb
+++ b/app/views/accounts/judging_queue.html.erb
@@ -49,7 +49,7 @@ function signup(challenge_id) {
 							</td>
 							<td><%= judging_category_display(record['challenge_categories__r']) %></td>
 							<td><%= Date.parse(record['end_date']).strftime("%m/%d/%Y") %></td>
-							<td><%= Date.parse(record['winner_announced']).strftime("%m/%d/%Y") %></td>
+							<td><%= Date.parse(record['review_date']).strftime("%m/%d/%Y") %></td>
 							<td><div id="signup" style="cursor: pointer;color:#09f"><span onclick="signup('<%= record['challenge_id'] %>')">Sign up to judge</span></div></td>
 				      </tr>
 						<% end %>
