--- a/app/views/challenges/_challenge-sidebar-preview.html.erb
+++ b/app/views/challenges/_challenge-sidebar-preview.html.erb
@@ -1,17 +1,20 @@
 <ul>
 	<li><h2><span><%= @challenge_detail["Name"] %></span></h2></li>
 	<% if !@challenge_detail["Sponsor_Logo__c"].nil? %><li><img src="<%= @challenge_detail["Sponsor_Logo__c"] %>"></li><% end %>
-	<% if Time.parse(@challenge_detail['End_Date__c']).past? && !['Created','Hidden'].include?(@challenge_detail['Status__c']) %>
-		<li><h3>Status</h3><h2><span><%= @challenge_detail['Status__c'] %></span></h2></li>
-	<% else %>
-		<li><h3>Time Left For Submission</h3><h2><span><%= format_close_date_time(@challenge_detail['End_Date__c']) %></span></h2></li>
+
+	<% unless ['Evaluation'].include?@challenge_detail["Challenge_Type__c"] %>
+		<% if Time.parse(@challenge_detail['End_Date__c']).past? && !['Created','Hidden'].include?(@challenge_detail['Status__c']) %>
+			<li><h3>Status</h3><h2><span><%= @challenge_detail['Status__c'] %></span></h2></li>
+		<% else %>
+			<li><h3>Time Left For Submission</h3><h2><span><%= format_close_date_time(@challenge_detail['End_Date__c']) %></span></h2></li>
+		<% end %>
 	<% end %>
 	
-	<% if @challenge_detail["Prize_Type__c"].eql?("Currency") %>
+	<% if @challenge_detail["Prize_Type__c"].eql?("Currency") && @challenge_detail["Total_Prize_Money__c"].to_i > 1 %>
 		<li><h3>Total Prize Amount</h3><h2><span><%= number_to_currency(@challenge_detail["Total_Prize_Money__c"], :precision => 0) %></span></h2></li>
 	<% end %>
 	
-	<% if @challenge_detail["Challenge_Prizes__r"] %>
+	<% if @challenge_detail["Challenge_Prizes__r"] && @challenge_detail["Total_Prize_Money__c"].to_i > 1 %>
 	<li><h3>Prizes</h3>
 		<ul>
 			<% @challenge_detail["Challenge_Prizes__r"]["records"].each do |record| %>                
@@ -21,18 +24,20 @@
 	</li>
 	<% end %>
 
-	<% unless @challenge_detail["Challenge_Type__c"].eql?("Race") %>
+	<% unless ['Race','Evaluation'].include?@challenge_detail["Challenge_Type__c"] %>
 		<li><h3>End Date</h3><strong><span>
 		<%= DateTime.parse(@challenge_detail["End_Date__c"]).strftime("%B %e, %Y at %I:%M%p") %>
 		</span></strong></li>	
 	<% end %>
 	
-	<li><h3>Winner Announced</h3><strong><span>
-	<% if @challenge_detail["Status__c"].eql?("Winner Selected") %>
-		<%= link_to "View the Winners", results_path %></span></strong>
-	<% else %>
-		<%= Date.parse(@challenge_detail["Winner_Announced__c"]).strftime("%B %e, %Y") %>
-	<% end %></span></strong></li>
+	<% unless ['Evaluation'].include?@challenge_detail["Challenge_Type__c"] %>
+		<li><h3>Winner Announced</h3><strong><span>
+		<% if @challenge_detail["Status__c"].eql?("Winner Selected") %>
+			<%= link_to "View the Winners", results_path %></span></strong>
+		<% else %>
+			<%= Date.parse(@challenge_detail["Winner_Announced__c"]).strftime("%B %e, %Y") %>
+		<% end %></span></strong></li>
+	<% end %>
 
 	<li style="display:block;"><h3>Participants</h3>
 		<strong><span><%= pluralize(@challenge_detail["Participating_Members__c"].to_i, 'member') %> participating with <%= @challenge_detail["Registered_Members__c"].to_i %> registered</span></strong>
