--- a/app/views/challenges/_challenge-sidebar.html.erb
+++ b/app/views/challenges/_challenge-sidebar.html.erb
@@ -11,10 +11,12 @@
 		<% end %></li>
 	<% end %>
 
-	<% if Time.parse(@challenge_detail['End_Date__c']).past? && !['Created','Hidden'].include?(@challenge_detail['Status__c']) %>
-		<li><h3>Status</h3><h2><span><%= @challenge_detail['Status__c'] %></span></h2></li>
-	<% else %>
-		<li><h3>Time Left For Submission</h3><h2><span><%= format_close_date_time(@challenge_detail['End_Date__c']) %></span></h2></li>
+	<% unless ['Evaluation'].include?@challenge_detail["Challenge_Type__c"] %>
+		<% if Time.parse(@challenge_detail['End_Date__c']).past? && !['Created','Hidden'].include?(@challenge_detail['Status__c']) %>
+			<li><h3>Status</h3><h2><span><%= @challenge_detail['Status__c'] %></span></h2></li>
+		<% else %>
+			<li><h3>Time Left For Submission</h3><h2><span><%= format_close_date_time(@challenge_detail['End_Date__c']) %></span></h2></li>
+		<% end %>
 	<% end %>
 	
 	<% if signed_in? && (current_user.email? && current_user.email.include?('@appirio.com') || current_user.accountid? && current_user.accountid.eql?(@challenge_detail['Account__c'])) %>
@@ -24,11 +26,11 @@
 		<span><%= link_to "Score submissions", outstanding_reviews_path %></span></strong>
 	<% end %>
 	
-	<% if @challenge_detail["Prize_Type__c"].eql?("Currency") %>
+	<% if @challenge_detail["Prize_Type__c"].eql?("Currency") && @challenge_detail["Total_Prize_Money__c"].to_i > 1 %>
 		<li><h3>Total Prize Amount</h3><h2><span><%= number_to_currency(@challenge_detail["Total_Prize_Money__c"], :precision => 0) %></span></h2></li>
 	<% end %>
 	
-	<% if @challenge_detail["Challenge_Prizes__r"] %>
+	<% if @challenge_detail["Challenge_Prizes__r"] && @challenge_detail["Total_Prize_Money__c"].to_i > 1 %>
 	<li><h3>Prizes</h3>
 		<ul>
 			<% @challenge_detail["Challenge_Prizes__r"]["records"].each do |record| %>                
@@ -38,20 +40,22 @@
 	</li>
 	<% end %>
 
-	<% unless @challenge_detail["Challenge_Type__c"].eql?("Race") %>
+	<% unless ['Race','Evaluation'].include?@challenge_detail["Challenge_Type__c"] %>
 		<li><h3>End Date</h3><strong><span>
 		<%= DateTime.parse(@challenge_detail["End_Date__c"]).strftime("%B %e, %Y at %I:%M%p") %>
 		</span></strong></li>
 	<% end %>
 	
-	<li><h3>Winner Announced</h3><strong><span>
-	<% if @challenge_detail["Status__c"].eql?("Winner Selected") %>
-		<%= link_to "View the Winners", results_path %></span></strong>
-	<% elsif @challenge_detail["Status__c"].eql?("No Winner Selected") %>
-		<%= link_to "View the Scorecards", results_path %></span></strong>		
-	<% else %>
-		<%= Date.parse(@challenge_detail["Winner_Announced__c"]).strftime("%B %e, %Y") %>
-	<% end %></span></strong></li>
+	<% unless ['Evaluation'].include?@challenge_detail["Challenge_Type__c"] %>
+		<li><h3>Winner Announced</h3><strong><span>
+		<% if @challenge_detail["Status__c"].eql?("Winner Selected") %>
+			<%= link_to "View the Winners", results_path %></span></strong>
+		<% elsif @challenge_detail["Status__c"].eql?("No Winner Selected") %>
+			<%= link_to "View the Scorecards", results_path %></span></strong>		
+		<% else %>
+			<%= Date.parse(@challenge_detail["Winner_Announced__c"]).strftime("%B %e, %Y") %>
+		<% end %></span></strong></li>
+	<% end %>
 		
 	<% unless @challenge_detail["Challenge_Type__c"].eql?("Info Only - No Registration") %>	
 		<% if signed_in? %>
